fix : add align-items: center; for toggle-label

--- a/src/components/RangeSlider/ConfigurationPanel/ConfigurationPanel.scss
+++ b/src/components/RangeSlider/ConfigurationPanel/ConfigurationPanel.scss
@@ -60,6 +60,8 @@
 
 .settings-panel__options-toggle-label {
   cursor: pointer;
+  display: flex;
+  align-items: center;
 
   &:focus-within {
     font-weight: bold;
